// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-mobile"
    >
      Expenses
    </div>
    <div
      className="visible-desktop"
    >
      Expense
    </div>
    <div
      className="visible-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-bottom"
  >
    <div>
      <span
        className=" list-item list-item--empty"
      >
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-mobile"
    >
      Expenses
    </div>
    <div
      className="visible-desktop"
    >
      Expense
    </div>
    <div
      className="visible-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-bottom"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
